--- a/paper/sec/bijections.tex
+++ b/paper/sec/bijections.tex
@@ -608,7 +608,7 @@ Observe that the permutation can be read off the graph of the SCP by a vertical 
 As the intersection graph of any pair of essential complementary partitions is a bipartite tree, there is a unique path between any two vertices. 
 
 \begin{definition}
-    For $(\sigma,\tau)$ a pair of essential complementary partitions, we denote by $\sigma_{i,j}$ the unique path between blocks $\sigma_{i}$ and $\sigma_j$, and similarly $\tau_{i,j}$.
+    For $(\sigma,\tau)$ a pair of essential complementary partitions, we denote by $\sigma_{i,j}$ (resp. $\tau_{i,j}$) the unique oriented path between blocks $\sigma_{i}$ and $\sigma_j$ (resp. $\tau_{i}$ and $\tau_j$).
 \end{definition}
 Note that we make a slight abuse in notation as the path $\sigma_{i,j}$ also depends on $\tau$.
 We can immediately characterise the paths between adjacent blocks of $\SCP$s.
