--- a/paper/sec/bijections.tex
+++ b/paper/sec/bijections.tex
@@ -189,6 +189,10 @@ In the case of the permutahedron it sends $\LAD$ to $(\LAD)^\op$ and $\SUD$ to $
     Finally, since both $t,r$ and $s$ preserve the poset structures, so does their composition, which finishes the proof.
 \end{proof}
 
+\begin{remark}
+    There is a second, distinct isomorphism given by $t(r\times r)$ \Guillaume{TBC}
+\end{remark}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \subsection{Facets of operadic diagonals}
@@ -578,28 +582,28 @@ A \emph{strong complementary pair ($\SCP$ for short)} is a pair of ordered parti
 
 \begin{example}
 \label{ex:strong-complementary}
-The SCP associated to the permutation $2573641$ is,
+The SCP associated to the permutation $3|1|7|4|2|5|6$ is,
 \begin{center}
 \begin{tikzpicture}[scale=.7]  
-\node (p) at (0, 0) {$2|5|37|146 \times 257|36|4|1$};
-\node (1) at (-1.5, -1) {$2$};
-\node (2) at (-1.5, -2) {$5$};
-\node (3) at (-1.5, -3) {$37$};
-\node (4) at (-1.5, -4) {$146$};
-%
-\node (5) at (1.5, -1) {$257$};
-\node (6) at (1.5, -2) {$36$};
-\node (7) at (1.5, -3) {$4$};
-\node (8) at (1.5, -4) {$1$};
-%
-\draw[-] (1)--(5); 
-\draw[-] (2)--(5); 
-\draw[-] (3)--(5); 
-\draw[-] (3)--(6); 
-\draw[-] (4)--(6); 
-\draw[-] (4)--(7); 
-\draw[-] (4)--(8);
-%
+    \node (p) at (0, 0) {$13|247|5|6 \times 3|17|4|256$};
+    \node (1) at (-1.5, -1) {$13$};
+    \node (2) at (-1.5, -2) {$247$};
+    \node (3) at (-1.5, -3) {$5$};
+    \node (4) at (-1.5, -4) {$6$};
+    %
+    \node (5) at (1.5, -1) {$3$};
+    \node (6) at (1.5, -2) {$17$};
+    \node (7) at (1.5, -3) {$4$};
+    \node (8) at (1.5, -4) {$256$};
+    %
+    \draw[-] (1)--(5); 
+    \draw[-] (1)--(6); 
+    \draw[-] (2)--(6); 
+    \draw[-] (2)--(7); 
+    \draw[-] (2)--(8); 
+    \draw[-] (3)--(8); 
+    \draw[-] (4)--(8);
+    %
 \end{tikzpicture}
 \end{center}
 Observe that the permutation can be read off the graph of the SCP by a vertical down slice through the edges of the graph.
@@ -644,12 +648,63 @@ For this set we define the \emph{subset left shift operator} by
     L_{M_{i+1}}(\tau) \eqdef \tau_1|\dots|\tau_i \cup M_{i+1}|\tau_{i+1} \ssm M_{i+1}|\dots|\tau_l \ .
 \end{align*}
 \end{definition}
-\Guillaume{Add an example of shifts, performed on \cref{ex:strong-complementary}.}
+
+\begin{example}
+Performing the subset shifts $R_7$ and $L_{5,6}$ on the $\SCP$ $(\sigma,\tau)$ of \cref{ex:strong-complementary}, one obtains the pair $R_{7}(\sigma) \times L_{5,6}(\tau)$.
+\begin{center}
+\begin{tikzpicture}[scale=.7]  
+    \node (p) at (0, 0) {$13|247|5|6 \times 3|17|4|256$};
+    \node (1) at (-1.5, -1) {$13$};
+    \node (2) at (-1.5, -2) {$247$};
+    \node (3) at (-1.5, -3) {$5$};
+    \node (4) at (-1.5, -4) {$6$};
+    %
+    \node (5) at (1.5, -1) {$3$};
+    \node (6) at (1.5, -2) {$17$};
+    \node (7) at (1.5, -3) {$4$};
+    \node (8) at (1.5, -4) {$256$};
+    %
+    \draw[-] (1)--(5); 
+    \draw[-] (1)--(6); 
+    \draw[-] (2)--(6); 
+    \draw[-] (2)--(7); 
+    \draw[-] (2)--(8); 
+    \draw[-] (3)--(8); 
+    \draw[-] (4)--(8);
+    %
+\end{tikzpicture}
+\quad
+\raisebox{3em}{$\xrightarrow{R_{7} \times L_{5,6}}$}
+\quad
+\begin{tikzpicture}[scale=.7]  
+\node (p) at (0, 0) {$13|24|57|6 \times 3|17|456|2$};
+\node (1) at (-1.5, -1) {$13$};
+\node (2) at (-1.5, -2) {$24$};
+\node (3) at (-1.5, -3) {$57$};
+\node (4) at (-1.5, -4) {$6$};
+%
+\node (5) at (1.5, -1) {$3$};
+\node (6) at (1.5, -2) {$17$};
+\node (7) at (1.5, -3) {$456$};
+\node (8) at (1.5, -4) {$2$};
+%
+\draw[-] (1)--(5); 
+\draw[-] (1)--(6); 
+\draw[-] (3)--(6); 
+\draw[-] (2)--(7); 
+\draw[-] (2)--(8); 
+\draw[-] (3)--(7); 
+\draw[-] (4)--(7);
+%
+\end{tikzpicture}
+\end{center}
+\end{example}
+
 Observe that the left shift operator moves elements to the left, but acts on the right ordered partition.
 Dually, the right shift operator moves elements to the right but acts on the left ordered partition.
 
 \begin{remark}
-    In the analogous description for the diagonal $\LAD$ obtained at the end of the Section [REF], left and right shift operators act on the left and right ordered partitions, respectively. 
+    In the analogous description for the diagonal $\LAD$ obtained at the end of the Section \Guillaume{[REF]}, left and right shift operators act on the left and right ordered partitions, respectively. 
 \end{remark}
 
 For $p\geq 1$, let $\textbf{M} = (M_{i_1},\dots,M_{i_p}) \in [n]^{p}$, be such that $1\leq i_1 < i_2 \dots < i_p \leq k-1$, and each of the iterated compositions $R_\mathbf{M}(\sigma)  \eqdef  R_{M_{i_p}}\dots R_{M_{i_1}}(\sigma)$ are well-defined.
@@ -666,12 +721,12 @@ By convention, we allow the empty sequence of subset shift operators, which acts
 
 Let us now introduce an alternative definition, which will be proven in \cref{prop:subset shift to shift bijection} to be equivalent to the preceding one, and in \cref{prop: shift SUD and SUD are equal} to $\SUD$ with its $(I,J)$-description. 
 
-\begin{definition} \label{def:critical SU shift}
+\begin{definition}[Critical elements] \label{def:critical SU shift}
     Let $(\sigma,\tau)$ be a pair of ordered partitions.
-    An \emph{critical element} is either an element $\rho \in (\sigma_i \ssm \min \sigma_i)$ such that $\rho>\max \sigma_{i,i+1}$, or an element $\rho \in (\tau_{i+1} \ssm \min\tau_{i+1})$ such that $\rho > \max \tau_{i,i+1}$. 
+    A \emph{critical element} is either an element $\rho \in (\sigma_i \ssm \min \sigma_i)$ such that $\rho>\max \sigma_{i,i+1}$, or an element $\rho \in (\tau_{i+1} \ssm \min\tau_{i+1})$ such that $\rho > \max \tau_{i,i+1}$. 
 \end{definition}
 
-Let us call \emph{critical} the right and left shift operators associated with the singleton sets given by critical elements, and let us denote them by $R_{\rho}$ and $L_{\rho}$.
+Let us call \emph{critical} the right and left shift operators associated with the singleton sets given by critical elements, and denote them by $R_{\rho}$ and $L_{\rho}$.
 
 \begin{definition}[Shift $\SU$ diagonal]
     The facets of the \emph{shift $\SU$ diagonal} are given by the formula
