--- a/paper/sec/fvectors.tex
+++ b/paper/sec/fvectors.tex
@@ -248,14 +248,14 @@ For instance
 \end{remark}
 
 \begin{figure}
-	\centerline{\includegraphics[scale=.9]{figures/intersectionPosetBraidArrangement31}}
-	\caption{The braid arrangement $\braidArrangement[3]$ (left) and its flat poset~$\flatPoset[{\braidArrangement[3]}]$ (right).}
+	\centerline{\includegraphics[scale=.9]{figures/intersectionPosetBraidArrangement31Full}}
+	\caption{The braid arrangement $\braidArrangement[3]$ (left), its flat poset~$\flatPoset[{\braidArrangement[3]}]$ (middle), and its interpretation in terms of forests (right).}
 	\label{fig:braidArrangement31}
 \end{figure}
 
 \begin{figure}
-	\centerline{\includegraphics[scale=.9]{figures/intersectionPosetBraidArrangement32}}
-	\caption{The $(2,3)$-braid arrangement $\lBraidArrangement[3][2]$ (left) and its flat poset~$\flatPoset[{\lBraidArrangement[3][2]}]$ (right).}
+	\centerline{\includegraphics[scale=.9]{figures/intersectionPosetBraidArrangement32Full}}
+	\caption{The $(2,3)$-braid arrangement $\lBraidArrangement[3][2]$ (left), its flat poset~$\flatPoset[{\lBraidArrangement[3][2]}]$ (top right), and its interpretation in terms of colored forests (bottom right).}
 	\label{fig:braidArrangement32}
 \end{figure}
 
@@ -274,23 +274,32 @@ Note that the maximal elements of~$\forestPoset$ are the $(\ell, n)$-trees.
 \end{figure}
 \end{definition}
 
-\begin{remark}
-Note that by rooting each connected component of the $(\ell,n)$ forest in its smallest label and splitting hyperedges in edges between each vertex of the hyperedge and the closest vertex from the root one get the following alternative definitions for  $(\ell,n)$-forests and  $(\ell,n)$-trees:
-A {$(\ell,n)$-forest} (resp.~{$(\ell,n)$-tree}) is a forest (resp. tree) in which:
-\begin{itemize}
-\item each root is the smallest in its connected component 
-\item edges are colored by $\{1, \ldots, \ell\}$ 
-\item if a vertex $v$ is not a root, the unique path from $v$ to the root starts with an edge $e$ of color $c$: $e$ is then the only edge adjacent to $v$ of this color. 
-\end{itemize}
-We represent this interpretation of $(\ell,n)$-forests on Figure \ref{fig:forests} and the according intersection poset of $\lBraidArrangement[3][2]$ on Figure \ref{fig:braidArrangementTrees32}. 
-\vincent{Retravailler}
-\end{remark}
 
-\begin{figure}
-	\centerline{\includegraphics[scale=.9]{figures/intersectionPosetBraidArrangementTrees32}}
-	\caption{The flat poset of $\lBraidArrangement[3][2]$ in terms of forests. See also \cref{fig:braidArrangement32}.}
-	\label{fig:braidArrangementTrees32}
-\end{figure}
+
+\begin{definition}
+A \defn{$(\ell,n)$-colored forest} (resp.~\defn{$(\ell,n)$-colored tree}) is a rooted forest whose nodes are labeled (bijectively) by~$[n]$ and properly (no monochromatic edge) colored by~$\{0,\dots,n\}$ such that the roots of the forest are precisely the nodes colored~$0$.
+See \cref{fig:forests}.
+\end{definition}
+
+%\begin{remark}
+%Note that by rooting each connected component of the $(\ell,n)$ forest in its smallest label and splitting hyperedges in edges between each vertex of the hyperedge and the closest vertex from the root one get the following alternative definitions for  $(\ell,n)$-forests and  $(\ell,n)$-trees:
+%A {$(\ell,n)$-forest} (resp.~{$(\ell,n)$-tree}) is a forest (resp. tree) in which:
+%\begin{itemize}
+%\item each root is the smallest in its connected component 
+%\item edges are colored by $\{1, \ldots, \ell\}$ 
+%\item if a vertex $v$ is not a root, the unique path from $v$ to the root starts with an edge $e$ of color $c$: $e$ is then the only edge adjacent to $v$ of this color. 
+%\end{itemize}
+%We represent this interpretation of $(\ell,n)$-forests on Figure \ref{fig:forests} and the according intersection poset of $\lBraidArrangement[3][2]$ on Figure \ref{fig:braidArrangementTrees32}. 
+%\vincent{Retravailler}
+%\end{remark}
+
+%\begin{figure}
+%	\centerline{\includegraphics[scale=.9]{figures/intersectionPosetBraidArrangementTrees32}}
+%	\caption{The flat poset of $\lBraidArrangement[3][2]$ in terms of forests. See also \cref{fig:braidArrangement32}.}
+%	\label{fig:braidArrangementTrees32}
+%\end{figure}
+
+\vincent{Explain that the flat poset is given by these forests.}
 
 \begin{theorem}
 \label{thm:MobiusPolynomial}
