--- a/paper/sec/fvectors.tex
+++ b/paper/sec/fvectors.tex
@@ -255,7 +255,7 @@ For instance
 
 \begin{figure}
 	\centerline{\includegraphics[scale=.9]{figures/intersectionPosetBraidArrangement32Full}}
-	\caption{The $(2,3)$-braid arrangement $\lBraidArrangement[3][2]$ (left), its flat poset~$\flatPoset[{\lBraidArrangement[3][2]}]$ (top right), and its interpretation in terms of colored forests (bottom right).}
+	\caption{The $(2,3)$-braid arrangement $\lBraidArrangement[3][2]$ (left), its flat poset~$\flatPoset[{\lBraidArrangement[3][2]}]$ (top right), and its interpretation in terms of $(2,3)$-colored forests (bottom right).}
 	\label{fig:braidArrangement32}
 \end{figure}
 
@@ -269,16 +269,9 @@ Note that the maximal elements of~$\forestPoset$ are the $(\ell, n)$-trees.
 %
 \begin{figure}
 	\centerline{\includegraphics[scale=.9]{forests}}
-	\caption{A $(3,6)$-forest with its intersection hypergraph and the corresponding forest (top) and a $(3,6)$-tree with its intersection hypertree and the corresponding tree (bottom).}
+	\caption{A $(3,6)$-forest with its intersection hypergraph and the corresponding $(3,6)$-colored forest (top) and a $(3,6)$-tree with its intersection hypertree and the corresponding $(3,6)$-colored tree (bottom).}
 	\label{fig:forests}
 \end{figure}
-\end{definition}
-
-
-
-\begin{definition}
-A \defn{$(\ell,n)$-colored forest} (resp.~\defn{$(\ell,n)$-colored tree}) is a rooted forest whose nodes are labeled (bijectively) by~$[n]$ and properly (no monochromatic edge) colored by~$\{0,\dots,n\}$ such that the roots of the forest are precisely the nodes colored~$0$.
-See \cref{fig:forests}.
 \end{definition}
 
 %\begin{remark}
@@ -299,7 +292,13 @@ See \cref{fig:forests}.
 %	\label{fig:braidArrangementTrees32}
 %\end{figure}
 
-\vincent{Explain that the flat poset is given by these forests.}
+\begin{proposition}
+The flat poset of the $(\ell,n)$-braid arrangement~$\lBraidArrangement$ is isomorphic to the $(\ell,n)$-forest poset.
+\end{proposition}
+
+\begin{proof}
+\vincent{TODO}
+\end{proof}
 
 \begin{theorem}
 \label{thm:MobiusPolynomial}
@@ -400,6 +399,22 @@ Note that~$3 \ell^2 + 2 \ell + 1$ is~\OEIS{A056109}, that~$\ell (3 \ell - 2)$ is
 \vincent{There is a weird connection between the first and the last. Namely, $3 \ell^2 - 4 \ell + 1 = 3 (\ell - 1)^2 + 2 (\ell - 1)$. Is there a bijective explanation on the arrangements?}
 \end{example}
 
+We will now provide more explicit formulas for the number of vertices and regions of the $(\ell,n)$-braid arrangement~$\lBraidArrangement$.
+For this, we first introduce another combinatorial model for $(\ell,n)$-forests and $(\ell,n)$-trees which is more adapted to their enumeration.
+
+\begin{definition}
+A \defn{$(\ell,n)$-colored forest} (resp.~\defn{$(\ell,n)$-colored tree}) is a rooted forest whose nodes are labeled (bijectively) by~$[n]$ and properly (no monochromatic edge) colored by~$\{0,\dots,n\}$ such that the roots of the forest are precisely the nodes colored~$0$.
+See \cref{fig:forests}.
+\end{definition}
+
+\begin{lemma}
+For any~$\ell,n \in \N$, the $(\ell,n)$-forests (resp.~trees) are in bijection with the $(\ell,n)$-colored forests (resp.~trees).
+\end{lemma}
+
+\begin{proof}
+\vincent{TODO}
+\end{proof}
+
 \begin{theorem}
 \label{thm:verticeslnBraidArrangement}
 The number of vertices of the $(\ell,n)$-braid arrangement~$\lBraidArrangement$ (or equivalently of $(\ell,n)$-trees) is
@@ -418,16 +433,44 @@ We adapt the proof from \cite{CKSS04}. By rooting in the part of colour $1$ cont
  There are $(\ell+(n-1)(\ell-1))^{n-2} \times \ell$ such words, hence the result.
 \end{proof}
 
-\begin{conjecture}
+\begin{theorem}
 \label{thm:verticesRefinedlnBraidArrangement}
 For any~$k_1, \dots, k_\ell$ such that~$0 \le k_i \le n-1$ for all~$i \in [\ell]$ and~$\sum_{i=1}^\ell k_i = n-1$, the number of vertices~$v$ of the $(\ell,n)$-braid arrangement~$\lBraidArrangement$ such that the smallest flat of the $i$th copy of~$\braidArrangement$ containing~$v$ has dimension~$n-k_i-1$ is given by
 \[
 n^{\ell-1}  \binom{n-1}{k_1, ..., k_\ell} \prod_{i=1}^\ell (n-k_i)^{k_i-1}.
 \]
-\end{conjecture}
+\end{theorem}
 
+\begin{proof}
+\vincent{TODO}
+\end{proof}
 
-\vincent{TODO: Check whether we can say something on the facets as well. I guess not, but I want to be sure.}
+\begin{theorem}
+\label{thm:facetslnBraidArrangement}
+The coefficient of~$x^{n-1}$ in the M\"obius polynomial~$\mobPol[{\lBraidArrangement}]$ of the $(\ell,n)$-braid arrangement~$\lBraidArrangement$ is given by
+\[
+[x^{n-1}] \, \mobPol[{\lBraidArrangement}] = \frac{(-1)^n n!}{y} \, [z^n] \, \exp \Bigg( - \sum_{m \ge 1} \frac{y \, z^m}{m(m+1)} \binom{\ell (m+1)-2}{m} \Bigg).
+\]
+\end{theorem}
+
+\begin{proof}
+\vincent{TODO}
+\end{proof}
+
+\begin{corollary}
+The numbers of regions and of bounded regions of the $(\ell,n)$-braid arrangement~$\lBraidArrangement$ are given by
+\begin{align*}
+f_{n-1}(\lBraidArrangement) 
+& = n! \, [z^n] \exp \Bigg( \sum_{m \ge 1} \frac{z^m}{m(m+1)} \binom{\ell (m+1)-2}{m} \Bigg) \\
+\text{and}\qquad
+b_{n-1}(\lBraidArrangement)
+& = - n! \, [z^n] \exp \Bigg( - \sum_{m \ge 1} \frac{z^m}{m(m+1)} \binom{\ell (m+1)-2}{m} \Bigg) 
+\end{align*}
+\end{corollary}
+
+\begin{proof}
+\vincent{TODO}
+\end{proof}
 
 \vincent{TODO: Discuss generalizations to $\ell$ copies of an arbitrary arrangement, or a graphical arrangement.}
 
