change order presentation

--- a/paper/aux/commands.tex
+++ b/paper/aux/commands.tex
@@ -41,7 +41,7 @@
 \newtheorem{ex}[theorem]{Examples}
 \newtheorem{example}[theorem]{Example}
 \newtheorem{policy}{Policy}
-\theoremstyle{remark}
+%\theoremstyle{remark}
 \newtheorem{remark}[theorem]{Remark}
 \newtheorem{caveat}[theorem]{Caveat}
 \numberwithin{equation}{section}
