--- a/paper/sec/introduction.tex
+++ b/paper/sec/introduction.tex
@@ -26,9 +26,9 @@ The purpose of the first part of this article is to study the combinatorics of t
   We compute the $f$-vector and the $b$-vector of $\ell$-generically translated copies of the braid arrangement, using Zaslavsky's Theorem. 
   We refine the enumeration of the vertices of the hyperplane arrangement using a combinatorial interpretation in terms of $(\ell, n)$-trees and get the following multiplicative formula:
 \begin{theorem}
-The number of vertices of the $(\ell,n)$-braid arrangement~$\lBraidArrangement$ (or equivalently of $(\ell,n)$-trees) is
+The number of vertices of the $(\ell,n)$-braid arrangement~$\multiBraidArrangement$ (or equivalently of $(\ell,n)$-trees) is
 \[
-f_0(\lBraidArrangement) = \ell \big( (\ell-1) n + 1)^{n-2}.
+f_0(\multiBraidArrangement) = \ell \big( (\ell-1) n + 1)^{n-2}.
 \]
 \end{theorem}
 We end this combinatorial section with a conjecture on edge-colored trees.
