--- a/paper/aux/commands.tex
+++ b/paper/aux/commands.tex
@@ -113,7 +113,7 @@
 \newcommandx{\arrangement}[1][1 = A]{\mathcal{#1}} % arrangement
 \newcommand{\HH}{\mathbb{H}} % hyperplane
 \newcommandx{\braidArrangement}[1][1 = n]{\arrangement[B]_{#1}} % braid arrangement
-\newcommandx{\lBraidArrangement}[2][1 = n, 2 = \ell]{\arrangement[B]_{#1}^{#2}} % (l,n)-braid arrangement
+\newcommandx{\multiBraidArrangement}[2][1 = n, 2 = \ell]{\arrangement[B]_{#1}^{#2}} % (l,n)-braid arrangement
 \newcommandx{\rank}[1][1 = \arrangement]{\operatorname{rk}(#1)} % rank
 \newcommandx{\facePoset}[1][1 = \arrangement]{\mathsf{Fa}(#1)} % face poset
 \newcommandx{\fPol}[2][1 = \arrangement, 2 = x]{\b{f}_{#1}(#2)} % face polynomial
